# pocr2

./: .gitignore  README.md  config.toml.example  justfile  pocr2.ps1  pyproject.toml  requirements.txt
src/: cli.py  gui.py  process.py  query.py
src/db/: __init__.py  database.py
src/utils/: config.py  ocr_processor.py
