[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pocr2"
version = "0.1.0"
description = "A local OCR tool for privacy-focused text extraction from images"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "pirafrank", email = "dev@fpira.com"},
]
keywords = ["ocr", "tesseract", "privacy", "image-processing", "text-extraction"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Capture :: Scanners",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "Levenshtein>=0.27.3",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/pirafrank/pocr2"
Repository = "https://github.com/pirafrank/pocr2"
Issues = "https://github.com/pirafrank/pocr2/issues"
